--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+
 
 dependencies:
   flutter:
@@ -26,18 +27,16 @@ dependencies:
 
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  mqtt_client: ^8.1.0
-  jose: ^0.2.1+1
-  provider: ^4.3.2
-  graphic: ^0.3.0
+
+  mqtt_client: ^9.0.0
+  jose: ^0.3.0
+  provider: ^5.0.0
 
 
 
 
 dev_dependencies:
+  test:
   flutter_test:
     sdk: flutter
 
