--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -46,4 +46,5 @@
             android:value="2" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
-  </manifest>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+</manifest>
