--- a/my_mqtt/analysis_options.yaml
+++ b/my_mqtt/analysis_options.yaml
@@ -1,4 +1,6 @@
-#include: package:pedantic/analysis_options.yaml
-#include: package:lints/recommended.yaml
-#include: package:effective_dart/analysis_options.yaml
+
 include: package:flutter_lints/flutter.yaml
+
+linter:
+  rules:
+    avoid_print: false
