--- a/my_mqtt/pubspec.yaml
+++ b/my_mqtt/pubspec.yaml
@@ -26,8 +26,7 @@ dependencies:
     sdk: flutter
 
   shared_preferences: ^2.0.5
-  stacked: ^2.1.6
-  get_it: ^6.0.0
+  get_it: ^7.0.0
   provider: ^5.0.0
 
   mqtt_client: ^9.0.0
@@ -46,6 +45,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.2
+  flutter_launcher_icons: "^0.9.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo_zh.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,8 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/keys/
-    - assets/roots/
+    - assets/images/
+
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
