--- a/my_mqtt/.vscode/settings.json
+++ b/my_mqtt/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.wordWrap": "off",
+    "editor.wordWrap": "on",
+    "editor.autoClosingBrackets": "beforeWhitespace",
+    "dart.completeFunctionCalls": false,
+    "dart.enableCompletionCommitCharacters": false,
 }
