--- a/my_mqtt/pubspec.yaml
+++ b/my_mqtt/pubspec.yaml
@@ -14,7 +14,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about Android versioning at https://developer.android.com/studio/publish/versioning
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# https://developer.apple.com/library/archive/documentation/General/Reference/NoticePlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -29,8 +29,7 @@ dependencies:
   get_it: ^7.0.0
   provider: ^5.0.0
 
-  mqtt_client: ^9.0.0
-  jose: ^0.3.0
+  fl_chart: ^0.36.1
 
   firebase_core: ^1.2.0
   firebase_auth: ^1.1.0
