--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -14,11 +14,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^9.2.0",
+    "@google-cloud/iot": "2.3.2",
+    "firebase-admin": "^9.9.0",
     "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
