--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -1,5 +1,3 @@
-// some fields are fulled with https://flutter.dev/docs/deployment/android
-//those fields marked by comments
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
@@ -27,11 +25,11 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
-//added manually
+
 apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-// entered manually
+
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
@@ -39,7 +37,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 29 //added manually
+    compileSdkVersion 30
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -51,26 +49,33 @@ android {
 
 
     defaultConfig {
-        //TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.hvac_remote_client"
-        minSdkVersion 23 //added manually
-        targetSdkVersion 30 //added manually
+        applicationId "com.hvac.remote.client"
+        minSdkVersion 23 
+        targetSdkVersion 30 
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        ndk {
+            debugSymbolLevel 'SYMBOL_TABLE'
+        }   
     }
 
-// //entered manually
-//    signingConfigs {
-//        release {
-//            keyAlias keystoreProperties['keyAlias']
-//            keyAuth keystoreProperties['keyAuth']
-//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-//            storeAuth keystoreProperties['storeAuth']
-//        }
-//    }
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
     buildTypes {
         release {
-            //signingConfig signingConfigs.release  // entered manually
+            signingConfig signingConfigs.release 
+
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android-optimize.txt'),
+                    'proguard-rules.pro'        
         }
     }
 }
@@ -81,7 +86,9 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-    implementation platform('com.google.firebase:firebase-bom:28.0.1') //added manually
-    implementation 'com.google.firebase:firebase-analytics' //added manually
+    implementation platform('com.google.firebase:firebase-bom:28.0.1') 
+    implementation 'com.google.firebase:firebase-analytics'
 }
+
+
+apply plugin: 'com.google.firebase.crashlytics'
