--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -25,17 +25,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  shared_preferences: ^2.0.5
   get_it: ^7.0.0
   provider: ^5.0.0
-
-  fl_chart: ^0.36.1
 
   firebase_core: ^1.2.0
   firebase_auth: ^1.1.0
   cloud_functions: ^1.1.0
-  cloud_firestore: ^2.2.0
-
+  firebase_crashlytics: ^2.0.6
 
 
 
@@ -45,11 +41,12 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.2
   flutter_launcher_icons: "^0.9.0"
+  flutter_native_splash: ^1.1.0
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo_zh.png"
+  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
