--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -25,19 +25,24 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #infrastructure
   get_it: ^7.0.0
-  provider: ^5.0.0
-  flutter_bloc: ^7.0.0
+  provider: ^6.0.0
 
+  #store
   firebase_core: ^1.2.0
   firebase_auth: ^3.0.0
+  cloud_firestore: ^2.4.0
   cloud_functions: ^3.0.0
   firebase_crashlytics: ^2.0.6
 
-  fl_chart: ^0.36.1   
+  #visual
+  charts_flutter: ^0.11.0
+  charts_common: ^0.11.0
+
 
 dev_dependencies:
-  test:
+  test: 
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.2
