--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -29,12 +29,15 @@ dependencies:
   get_it: ^7.0.0
   provider: ^6.0.0
 
-  #store
+  #firebase
   firebase_core: ^1.2.0
   firebase_auth: ^3.0.0
   cloud_firestore: ^2.4.0
   cloud_functions: ^3.0.0
   firebase_crashlytics: ^2.0.6
+
+  #store
+  path_provider: ^2.0.0
 
   #visual
   charts_flutter: ^0.11.0
@@ -46,8 +49,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.2
-  flutter_launcher_icons: "^0.9.0"
+  flutter_launcher_icons: ^0.9.0
   flutter_native_splash: ^1.1.0
+  vm_service: ^7.3.0
 
 flutter_icons:
   android: "launcher_icon"
