--- a/client/.gitignore
+++ b/client/.gitignore
@@ -26,11 +26,19 @@
 .pub/
 /build/
 
+# Web related
+lib/generated_plugin_registrant.dart
+
 # Symbolication related
 app.*.symbols
 
 # Obfuscation related
 app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
 
 ### Dart ###
 # See https://www.dartlang.org/guides/libraries/private-files
