--- a/client/android/app/src/debug/AndroidManifest.xml
+++ b/client/android/app/src/debug/AndroidManifest.xml
@@ -1,6 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.hvac.remote.client">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.hvac.remote.client">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
