--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -20,7 +20,6 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.13.0 <3.0.0'
 
-
 dependencies:
   flutter:
     sdk: flutter
@@ -38,6 +37,7 @@ dependencies:
 
   #store
   path_provider: ^2.0.0
+  path: ^1.8.0
 
   #visual
   charts_flutter: ^0.11.0
