--- a/data collector/platformio.ini
+++ b/data collector/platformio.ini
@@ -12,5 +12,5 @@
 platform = atmelavr
 board = uno
 framework = arduino
-build_flags = -D SERIAL_RX_BUFFER_SIZE=255  
 lib_deps = bblanchon/ArduinoJson@^6.19.0
+build_flags = -D SERIAL_RX_BUFFER_SIZE=255 -fexceptions
