--- a/wifi module/platformio.ini
+++ b/wifi module/platformio.ini
@@ -20,3 +20,5 @@ lib_deps =
 	googlecloudplatform/Google Cloud IoT Core JWT@^1.1.11
 	bblanchon/ArduinoJson@^6.19.0
 monitor_filters = esp8266_exception_decoder
+
+build_flags = -D SERIAL_RX_BUFFER_SIZE=255  
