--- a/controller/platformio.ini
+++ b/controller/platformio.ini
@@ -15,17 +15,16 @@ framework = arduino
 board_build.filesystem = littlefs
 lib_ldf_mode = deep+
 lib_deps = 
-	alexiii/incbin@^0.1.1
 	256dpi/MQTT@^2.5.0
 	googlecloudplatform/Google Cloud IoT Core JWT@^1.1.11
 	bblanchon/ArduinoJson@^6.19.0
-monitor_filters = esp32_exception_decoder
+monitor_filters = 
+	esp32_exception_decoder
 board_build.embed_txtfiles = 
 	src/communication/sensitive/backup.cer
 	src/communication/sensitive/primary.cer
-
 build_flags = 
-    -std=c++17
-    -std=gnu++17
+	-std=c++17
+	-std=gnu++17
 build_unflags = 
-    -std=gnu++11
+	-std=gnu++11
