--- a/controller/.vscode/settings.json
+++ b/controller/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
-    "C_Cpp.clang_format_fallbackStyle":"{ BasedOnStyle: Google, ColumnLimit: 120}",
+    "editor.formatOnSave": true,
+    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, ColumnLimit: 120}",
     "[cpp]": {
         "editor.suggest.insertMode": "replace",
         "editor.semanticHighlighting.enabled": true,
-        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.fixAll": true,
+        },
     }
 }
