add Yandex Cloud, add injection of MQTT client

--- a/controller/platformio.ini
+++ b/controller/platformio.ini
@@ -16,13 +16,14 @@ board_build.filesystem = littlefs
 lib_ldf_mode = deep+
 lib_deps = 
 	256dpi/MQTT@^2.5.0
-	googlecloudplatform/Google Cloud IoT Core JWT@^1.1.11
 	bblanchon/ArduinoJson@^6.19.0
+	googlecloudplatform/Google Cloud IoT Core JWT@^1.1.11
 monitor_filters = 
 	esp32_exception_decoder
 board_build.embed_txtfiles = 
-	src/communication/sensitive/backup.cer
-	src/communication/sensitive/primary.cer
+	src/communication/sensitive/yandex/cert.pem
+	src/communication/sensitive/yandex/key.pem
+	src/communication/sensitive/yandex/root_ca.crt
 build_flags = 
 	-std=c++17
 	-std=gnu++17
