--- a/controller/.vscode/settings.json
+++ b/controller/.vscode/settings.json
@@ -7,5 +7,8 @@
         "editor.codeActionsOnSave": {
             "source.fixAll": true,
         },
+    },
+    "files.associations": {
+        "new": "cpp"
     }
 }
