--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.13.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -43,8 +43,7 @@ dependencies:
   charts_flutter: ^0.12.0
   charts_common: ^0.12.0
 
-  #mqtt
-  mqtt_client: ^9.0.0
+  #serializing
   jose: ^0.3.0
 
 
@@ -52,10 +51,10 @@ dev_dependencies:
   test: 
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.2
+  flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.9.0
-  flutter_native_splash: ^1.1.0
-  vm_service: ^7.3.0
+  flutter_native_splash: ^2.2.3
+  vm_service: ^8.0.0
 
 flutter_icons:
   android: "launcher_icon"
